# kith

./: .gitignore  .local-ci.conf  CHANGELOG.md  PROGRESS.md  README.md  appstore-metadata.md
.claude/: launch.json
.github/workflows/: android.yml  relay-release.yml  release.yml
Scripts/: export-compliance.mjs
Scripts/export-compliance-tools/: annual-reminder.ics  encryption-statement.txt  make-statement-pdf.sh  send-report.applescript
android/: build-rust.sh  settings.gradle.kts
android/Tools/: capture_screenshots.sh
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/blaineam/haven/: CoreInstrumentedTest.kt  FilterInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/blaineam/haven/: HavenApplication.kt  MainActivity.kt
android/app/src/main/java/com/blaineam/haven/core/: CallManager.kt  CallWire.kt  CircleLock.kt  CircleRemovals.kt  CircleSettings.kt  ConnectionService.kt  DemoSeed.kt  DmPins.kt  GlPhotoFilter.kt  HavenCore.kt  HavenGlFilter.kt  HavenNet.kt  HiddenStore.kt  LocalMedia.kt  LocationShare.kt  MediaFilters.kt  MediaSaver.kt  NearbyTransport.kt  Presign.kt  ProfileStore.kt  Restart.kt  SafetyWords.kt  ScheduledStore.kt  SelfSyncCoordinator.kt  ShareInbox.kt  VideoFilter.kt  WebRTCPeer.kt  Wire.kt
android/app/src/main/java/com/blaineam/haven/ui/: AudioMessage.kt  CallUI.kt  CircleScreen.kt  EditProfileScreen.kt  FilteredCameraView.kt  FilteredVideoView.kt  HavenAvatar.kt  LinkText.kt  MessagesScreen.kt  Music.kt  PeopleScreen.kt  RootScreen.kt  SettingsScreen.kt  Stories.kt  StoryCameraScreen.kt  StoryCaptions.kt  StoryEditor.kt  StoryFilters.kt  YouScreen.kt
android/app/src/test/java/com/blaineam/haven/core/: CallWireTest.kt  SafetyWordsTest.kt
apple/: .local-screenshots.conf  Generated  README.md  build-rust-xcframework.sh  project.yml
apple/HavenApp/: AccountStore.swift  AppIntents.swift  Audio.swift  AudioCoordinator.swift  BackgroundUploader.swift  CallManager.swift  CallTones.swift  CameraView.swift  CaptionHarness.swift  CatalystSheet.swift  CircleSettings.swift  CircleView.swift  ConnectView.swift  Connections.swift  Contacts.swift  ContentView.swift  DeepLink.swift  DemoSeed.swift  DeviceLink.swift  DeviceRoster.swift  Diagnostics.swift  DualCamera.swift  EditPost.swift  Emoji.swift  FeedView.swift  Haven.Debug.entitlements  Haven.entitlements  Haven.macOS.developerid.entitlements  Haven.macOS.entitlements  HavenApp.swift  HavenLog.swift  HiddenStore.swift  Info 2.plist  Info 3.plist  Info 4.plist  Info 5.plist  Info.macOS.plist  Info.plist  LinkUI.swift  LiveFilterPreview.swift  (+41 more)
apple/HavenBroadcast/: Broadcast.entitlements  Info.plist  SampleHandler.swift
apple/HavenNotificationService/: Info.plist  NSE.entitlements  NSE.macOS.entitlements  NotificationService.swift
apple/HavenShareExtension/: Info.plist  Share.entitlements  ShareViewController.swift
apple/HavenUITests/: KithUITests.swift
apple/HavenWatch/: WatchConnectivityClient.swift  WatchTheme.swift  WatchViews.swift
apple/KithApp/: AccountStore.swift  Audio.swift  AudioCoordinator.swift  CallManager.swift  CameraView.swift  CircleView.swift  ConnectView.swift  Connections.swift  Contacts.swift  ContentView.swift  DeviceLink.swift  Diagnostics.swift  EditPost.swift  Emoji.swift  FeedView.swift  Info.plist  KithApp.swift  LegacyMigration.swift  Media.swift  MediaPicker.swift  Messages.swift  Music.swift  Networking.swift  NotificationManager.swift  NowPlaying.swift  OnboardingView.swift  PostMedia.swift  Profile.swift  ReactionDetail.swift  S3Client.swift  SafetyWords.swift  SecretMessages.swift  Settings.swift  SharedStore.swift  Storage.swift  Stories.swift  StoryCamera.swift  StoryCaption.swift  Theme.swift
apple/KithUITests/: KithUITests.swift
apple/Scripts/: dmg_settings.py  generate-dmg-background.swift
apple/Shared/: BroadcastIPC.swift  ShareInbox.swift  SharedInbox.swift  SharedLockedCircles.swift  SharedSeed.swift
apple/Tools/: capture_screenshots.sh
apple/WatchShared/: WatchBridge.swift
apple/icon/: make_icon.py
core/: Cargo.toml
core/demo/: Cargo.toml
core/demo/src/: main.rs
core/haven-net/: Cargo.toml
core/haven-net/src/: blobstore.rs  httprelay.rs  lib.rs
core/haven-net/tests/: exchange.rs
core/haven-relay/src/: config.rs  main.rs  runner.rs  service.rs
core/haven-wasm/: Cargo.toml
core/haven-wasm/src/: lib.rs
core/kith-net/: Cargo.toml
core/kith-net/src/: lib.rs
core/kith-net/tests/: exchange.rs
core/kith-wasm/src/: lib.rs
core/p2pcore/: Cargo.toml
core/p2pcore-ffi/: Cargo.toml
core/p2pcore-ffi/src/: lib.rs  multidevice.rs
core/p2pcore/src/: crypto.rs  device.rs  groupkey.rs  identity.rs  lib.rs  link.rs  selfsync.rs  social.rs  transport.rs
core/p2pcore/tests/: social.rs  spine.rs
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  engine.rs  lib.rs  localmedia.rs  relayhealth.rs  scheduled.rs  secret.rs  selfsync.rs  store.rs
desktop/ui/: _preview.html  app.js  index.html  styles.css
docs/: ANDROID-PARITY.md  ARCHITECTURE.md  BYO-STORAGE.md  CI-BETA.md  DECISIONS.md  EXPORT-COMPLIANCE.md  GROUP-KEYING.md  HAVEN-NET-RELAY.md  KITH-NET-RELAY.md  LINK-SYSTEM.md  LINUX.md  MEDIA-AND-MUSIC.md  MULTI-DEVICE.md  OPERATING-COSTS.md  RELAY-AND-DEPLOY.md  ROADMAP.md  SCHEDULED-MESSAGES.md  SECURITY.md  THREAT-MODEL.md
push/: README.md  worker.js  wrangler.toml
relay/: README.md  docker-compose.yml  haven-relay.service  install.ps1  install.sh  setup-macos.sh
relay/debian/: postinst
tools/screenshots/: .gitignore  README.md  package-lock.json  package.json  screens.json  screens.schema.json
tools/screenshots/scripts/: capture-android.sh  capture-windows.ps1
tools/screenshots/src/: brand.js  cli.js  render.js  sizes.js
web/: docs.html  features.html  index.html  relay.html  styles.css
web/engine/: haven_wasm.d.ts  haven_wasm.js  haven_wasm_bg.wasm  haven_wasm_bg.wasm.d.ts  package.json
