[package]
name = "haven-net"
version = "0.0.1"
edition = "2021"
publish = false
description = "Haven networking: iroh-backed P2P transport carrying sealed social envelopes."

[dependencies]
p2pcore = { path = "../p2pcore" }
iroh = { version = "1", features = ["unstable-custom-transports"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
anyhow = "1"
serde_json = "1.0.150"
data-encoding = "2.11.0"
rand = "0.8"

[dev-dependencies]
# Content-addressing in the blob-store integration test (mailbox key = hash of ciphertext).
blake3 = "1"
