[package]
name = "haven-wasm"
version = "0.0.1"
edition = "2021"
description = "Haven engine for the browser: real p2pcore identity + sealing + feed via wasm-bindgen."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
p2pcore = { path = "../p2pcore" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
