[package]
name = "kith_ffi"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "kith_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
kith-net = { version = "0.0.1", path = "../kith-net" }
p2pcore = { path = "../p2pcore" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
uniffi = { version = "0.31.2", features = ["cli", "tokio"] }
