[package]
name = "p2pcore"
version = "0.0.1"
edition = "2021"
description = "Kith P2P core: hybrid post-quantum identity, encryption, and (later) transport."
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
# Classical primitives
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Post-quantum primitives (RustCrypto, FIPS 203/204)
ml-kem = "0.2"

# KDF / AEAD / hashing
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
blake3 = "1"

# Encoding / RNG / errors
data-encoding = "2"
rand = "0.8"
rand_core = "0.6"
thiserror = "1"

[dev-dependencies]
hex = "0.4"
