[package]
name = "p2pcore"
version = "0.0.1"
edition = "2021"
description = "Haven P2P core: hybrid post-quantum identity, encryption, and (later) transport."
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
# Classical primitives
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Post-quantum primitives (RustCrypto, FIPS 203/204)
ml-kem = "0.2"

# KDF / AEAD / hashing
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
blake3 = "1"

# Encoding / RNG / errors
data-encoding = "2"
rand = "0.8"
rand_core = "0.6"
thiserror = "1"
ml-dsa = { version = "0.1.1", features = ["rand_core"] }
rand_chacha = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
hex = "0.4"

# WebAssembly-only: enable browser RNG backends for the two getrandom majors
# pulled in transitively (0.2 via rand_core, 0.4 via ml-dsa). No effect on native.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
